# pod-privileged-policy

./: .gitignore  Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  as-pect.config.js  e2e.bats  hub.yml  metadata.yml  package-lock.json  package.json  questions-ui.yml  renovate.json
.github/workflows/: ci.yml  release.yml  test.yml  tests.yml
assembly/: index.ts  policy_config.ts  validate.ts
assembly/__tests__/: .gitignore  validate.spec.ts
assembly/__tests__/fixtures/: req_delete.json  req_not_a_pod.json  top_level_privileged_security_context.json
src/: lib.rs  settings.rs
test_data/: deployment_with_privileged_containers.json  no_privileged_containers.json  privileged_container.json  privileged_ephemeral_container.json  privileged_init_container.json  settings_skip_init_and_ephemeral_containers.json  statefulset_with_privileged_container.json
