[package]
name = "pod-privileged-policy"
version = "1.0.8"
authors = ["José Guilherme Vanz <jguilhermevanz@suse.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.26.0", default-features = false, features = [
  "v1_31",
] }
kubewarden-policy-sdk = "0.15.0"
lazy_static = "1.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
rstest = "0.26.0"
